# linkage_sim

./: Cargo.toml  lib_test.cs  lib_test.py  lib_test_gh.py
src/: _main.rs  bezier.rs  lib.rs  main.rs  mech_solver.rs  optimization.rs  scissor_solver.rs  sim.rs
src/mech_solver/: triangle_solver.rs
src/mech_solver/triangle_solver/: variable_vector.rs  varriable_vector.rs
