[package]
name = "linkage_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "linkage_sim"
crate-type = ["cdylib"]

[dependencies]
cgmath = "0.18.0"
thiserror = "1.0"
num-traits = "0.2"
argmin = { version = "0.8" }
argmin-math = { version = "0.3", features = ["ndarray_latest-serde", "nalgebra_latest-serde"] }
plotters = "0.3.3"

[dependencies.druid]
version = "0.7.0"
